adds getblocktemplate and submitblock
